Tweak for some overflow issue on the landing comp

--- a/src/components/landing/landing.scss
+++ b/src/components/landing/landing.scss
@@ -9,7 +9,7 @@
     z-index: 20;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
+    overflow: hidden;
     background-color: black;
     &::after {
       position: absolute;
